syntax = "proto3";

package api.user.v1;

option go_package = "github.com/campuslink/campuslink/api/user/v1;v1";

// User 用户服务
service User {
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserReply);
  // 更新用户信息
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserReply);
  // 获取用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersReply);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserReply);
  // 学生认证
  rpc VerifyStudent(VerifyStudentRequest) returns (VerifyStudentReply);
  // 获取用户统计
  rpc GetUserStats(GetUserStatsRequest) returns (GetUserStatsReply);
  // 设置用户角色
  rpc SetUserRole(SetUserRoleRequest) returns (SetUserRoleReply);
}

// 获取用户请求
message GetUserRequest {
  uint64 user_id = 1;
}

// 获取用户响应
message GetUserReply {
  UserInfo user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  uint64 user_id = 1;
  string nickname = 2;
  string avatar = 3;
  string bio = 4;
  string phone = 5;
  string email = 6;
}

// 更新用户响应
message UpdateUserReply {
  string message = 1;
}

// 用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string keyword = 3;      // 搜索关键词
  string role = 4;         // 角色筛选
  bool verified_only = 5;  // 只显示已认证用户
}

// 用户列表响应
message ListUsersReply {
  repeated UserInfo users = 1;
  int64 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// 删除用户请求
message DeleteUserRequest {
  uint64 user_id = 1;
}

// 删除用户响应
message DeleteUserReply {
  string message = 1;
}

// 学生认证请求
message VerifyStudentRequest {
  uint64 user_id = 1;
  string student_id = 2;
  string real_name = 3;
  string school = 4;
  string id_card = 5;
  string student_card_image = 6; // 学生证照片
}

// 学生认证响应
message VerifyStudentReply {
  string message = 1;
  bool verified = 2;
}

// 用户统计请求
message GetUserStatsRequest {
  uint64 user_id = 1;
}

// 用户统计响应
message GetUserStatsReply {
  int64 order_count = 1;      // 订单数
  int64 task_count = 2;       // 任务数
  int64 product_count = 3;    // 商品数
  int64 credit_score = 4;     // 信用分
  double balance = 5;         // 余额
}

// 设置用户角色请求
message SetUserRoleRequest {
  uint64 user_id = 1;
  string role = 2; // student, seller, runner, admin
}

// 设置用户角色响应
message SetUserRoleReply {
  string message = 1;
}

// 用户信息
message UserInfo {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string phone = 4;
  string email = 5;
  string student_id = 6;
  string real_name = 7;
  string school = 8;
  string avatar = 9;
  string bio = 10;
  string role = 11;
  bool verified = 12;
  int64 credit_score = 13;
  string created_at = 14;
  string updated_at = 15;
}


